# truckowner

./: FINAL_RAILWAY_SETUP.md  FORMSPREE_SETUP.md  NETLIFY_DEPLOY.md  RAILWAY_DEPLOYMENT.md  RAILWAY_FIX.md  README.md  TELEGRAM_BOT_SETUP.md  _redirects  app.py  email_service.py  forms.py  netlify.toml  nixpacks.toml  pyproject.toml  railway.json  replit.md  requirements.txt  run_bot.py  setup.py  submit-form.html  success.html  telegram_bot.py  upload.html
attached_assets/: Pasted-Configure-deploy-site-Forms-Forms-setup-Netlify-s-serverless-form-handling-allows-you-to--1750506087074_1750506087075.txt
static/css/: style.css
static/js/: main.js
templates/: index.html  upload_form.html
